# bill-splitter

./: .gitignore  DEPLOYMENT.md  README.md  VISION_API_MIGRATION.md  bill-splitter.code-workspace  docker-compose.yml  frontend.code-workspace  package.json  pnpm-lock.yaml  wrangler.toml
.github/agents/: copilot-instructions.md
.github/workflows/: deploy-api.yml  deploy-frontend.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
api/: Cargo.toml  wrangler.toml
api/src/: lib.rs  main.rs  utils.rs
frontend/: .env.example  PWA-README.md  biome.json  cloudflare-env.d.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.jsonc  wrangler.toml
frontend/public/: sw.js
frontend/src/app/: layout.tsx  manifest.ts  page.tsx
frontend/src/components/: BillSplitter.tsx  FileUploadExtractor.tsx  PWAComponents.tsx
frontend/src/context/: BillContext.tsx  BillReducer.ts
frontend/src/lib/: calculations.ts  image-preprocessing.ts  mockData.ts  ocr-parser.ts  promptPayUtils.ts  receiptUtils.ts  storage.ts  types.ts  vision-api.ts
frontend/src/types/: css.d.ts  index.ts
frontend/src/workers/: ocr.worker.ts
my-next-app/: cloudflare-env.d.ts  package-lock.json  package.json  wrangler.jsonc
shared/: package.json  pnpm-lock.yaml  tsconfig.json
shared/src/: index.ts
shared/src/types/: api.ts  bill.ts  ocr.ts
specs/001-ocr-bill-splitter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-smart-bill-summary/: data-model.md  plan.md  quickstart.md  research.md  spec.md
(+24 files in other folders)
