[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["PetchDev <clkeen157@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'axum'] }
worker-macros = { version = "0.7", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
tokio-stream = "0.1.17"
serde_json = "1.0.145"
tokio = "1.48.0"
