[package]
name = "bill-splitter-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-stream = "0.3.6"
futures = "0.3.31"
futures-util = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
cargo-watch = "8.5.3"
